fix: Tamil page all alignment issues due to tamil font

--- a/css/style.css
+++ b/css/style.css
@@ -525,8 +525,8 @@ body {
 }
 
 .whatsapp-icon {
-  width: 18px;
-  height: 18px;
+  width: 28px;
+  height: 28px;
 }
 
 .schedule-spots {
